package com.sportsmatching.mvc.registro;

import com.sportsmatching.dominio.Usuario;
import com.sportsmatching.mvc.registro.modelos.RegistroModel;

public class RegistroController {
    private final RegistroModel model;
    private final RegistroView view;

    public RegistroController(RegistroModel model, RegistroView view) {
        this.model = model;
        this.view = view;
    }

    public Boolean registrarUsuario(String username, String email, String password, 
                                   com.sportsmatching.dominio.catalogos.Nivel nivel,
                                   com.sportsmatching.dominio.catalogos.Deporte deporteFavorito,
                                   com.sportsmatching.dominio.Location ubicacion) {
        try {
            Usuario usuario = model.crearUsuario(username, email, password, nivel, deporteFavorito, ubicacion);
            if (usuario != null) {
                view.mostrarExito();
                return true;
            } else {
                view.mostrarError("Error al crear el usuario");
                return false;
            }
        } catch (Exception e) {
            view.mostrarError(e.getMessage());
            return false;
        }
    }
}

